--- a/simfiles.html
+++ b/simfiles.html
@@ -51,10 +51,13 @@
     </a>
 	  <p>
 	  These are all my old files. The vast majority of them are utter trash. I advise you to avoid them entirely.
+	  </p>
 	  <br>
+	  <p>
 	  Prior to now, I was adamant that these no longer be distributed for a large number of reasons, the most obvious
 	  of which is that they all suck. Enormously. However, enough people have asked me about seeing these that I have
-	  decided to acquiese and all them to be downloaded once again. </p>
+	  decided to acquiese and all them to be downloaded once again.
+	  </p>
 	  <br>
 	  <p style="font-weight: bold">
 	  IMPORTANT NOTE - I CANNOT STRESS THIS ENOUGH
