--- a/simfiles.html
+++ b/simfiles.html
@@ -46,7 +46,7 @@
   <h2 class="header">Skittles' Ancient Garbage</h2>
   <h3 class="header">We all start somewhere. I started in the dumpster.</h3>
   <p>
-    <a style="float:left;" href="ss5.html">
+    <a style="float:left;" href="https://drive.google.com/file/d/1euhjWpI1R2kxMW3oI3fe3Rs3WpfDeB3G/view?usp=sharing">
       <img src="garbage.png" style="width=418px; height=164px;" />
     </a>
 	  <p>
