--- a/simfiles.html
+++ b/simfiles.html
@@ -22,12 +22,12 @@
       <img src="ss5.png" style="width=418px; height=164px;" />
     </a>
 	  <p>
-	    Sleepo beepo grungus amongus
-		<br>
-		Lorem ipsum who the fuck needs that when you got COPY PAAAAAAAAAAAAAAAAAAAAAA actually nevermind it ddin't like that let's not do it again
-		Oh shit it liked that though fuck yeah okay that being said I need to fill this with text to make sure that line breaks and wrapping works properly
-		<br><br><br>
+	  The first pack I created that I considered to have competent (at minimal) charting and writing from top to bottom.
+	  While there are few truly standout files, everything here is at least enjoyable and crafted decently-well, in my opinion.
+	  Highlights include ErrorCode and Grand Slam.
 	  </p>
+	  <br>
+	  Tags: All-Around, Technical, Full Difficulties
     </p>
 <br>
   <h2 class="header">Skittles' Ancient Garbage</h2>
@@ -43,7 +43,7 @@
 	  <p>
 	  Prior to now, I was adamant that these no longer be distributed for a large number of reasons, the most obvious
 	  of which is that they all suck. Enormously. However, enough people have asked me about seeing these that I have
-	  decided to acquiese and all them to be downloaded once again.
+	  decided to acquiese and allow them to be downloaded once again.
 	  </p>
 	  <br>
 	  <p style="font-weight: bold">
@@ -54,6 +54,8 @@
 	  These files were all made far, far before I really got a good grip on proper charting. As such, I cannot guarantee that
 	  any of these files are synced well, flow properly, or are even fun. Again, I REALLY encourage you to play my newer files
 	  instead. I do not have the time nor the desire to return to any of these and improve any facet of them at all.
+	  <br><br>
+	  Tags: These, Files, Are, All, Bad
 	  </p>
 </body>
 
