--- a/simfiles.html
+++ b/simfiles.html
@@ -15,7 +15,7 @@
   </ul>
 <br>
 <h1 class="header">Solo Pack Releases</h1>
-<h3 class="header">From newest to oldest</h3>
+<h3 class="header">Arranged from newest to oldest</h3>
   <h2 class="header">Skittles Selection 5</h2>
   <h3 class="header">When things started to click. - Feat. TS3 Highlights</h3>
   <p>
