--- a/simfiles.html
+++ b/simfiles.html
@@ -14,8 +14,9 @@
     <li><a href="https://www.youtube.com/channel/UCFhnym7AHHsislUTUmAZwzQ">Youtube</a></li>
   </ul>
 <br>
-<h1 class="header">Solo Pack Releases</h1>
+<h1 class="header">Simfile Pack Releases</h1>
 <h3 class="header">Arranged from newest to oldest</h3>
+<h3 class="header">All files synced to ITG +9ms bias unless otherwise noted.</h3>
   <h2 class="header">Chicago Timing Authority</h2>
     <h3 class="header">Collab Pack with ATB</h3>
     <p>
