--- a/simfiles.html
+++ b/simfiles.html
@@ -24,8 +24,13 @@
 	  <img src="cta.png" style="width=418px; height=164px;" />
 	  </a>
 	    <p>
-		Lorem Ipsum fuck you
-		<br><br><br><br><br><br><br><br><br>
+		The first time I ever collaborated with another step artist, and the first time I ever wrote files specifically
+		to be challenging or unusual tech. Arguably the pack that first made me relevant in the charting metagame as a
+		whole. I'm forever gracious to ATB for being open to working with a relative newbie to make something special
+		in the technical simfile universe come to life.
+		<br><br>
+		Highlights (of mine) include ChaserXX, Contrast, Hellcrime, and Mischievous Masquerade
+		<br><br><br><br>
 		</p>
 	  </p>
   <h2 class="header">Skittles Selection 5</h2>
