--- a/simfiles.html
+++ b/simfiles.html
@@ -30,7 +30,8 @@
 		in the technical simfile universe come to life.
 		<br><br>
 		Highlights (of mine) include ChaserXX, Contrast, Hellcrime, and Mischievous Masquerade
-		<br><br><br><br>
+		<br><br>
+		<p>Tags: Collaboration, Technical</p>
 		</p>
 	  </p>
   <h2 class="header">Skittles Selection 5</h2>
