--- a/simfiles.html
+++ b/simfiles.html
@@ -20,7 +20,7 @@
   <h2 class="header">Chicago Timing Authority</h2>
     <h3 class="header">Collab Pack with ATB</h3>
     <p>
-	  <a style="float:left;" href="ss5.html">
+	  <a style="float:left;" href="https://drive.google.com/file/d/1R5nhPlDArNcd2XZelzTa164BcuDw_UWf/view?usp=sharing">
 	  <img src="cta.png" style="width=418px; height=164px;" />
 	  </a>
 	    <p>
