--- a/simfiles.html
+++ b/simfiles.html
@@ -17,6 +17,14 @@
 <h1 class="header">Simfile Pack Releases</h1>
 <h3 class="header">Arranged from newest to oldest</h3>
 <h3 class="header">All files synced to ITG +9ms bias unless otherwise noted.</h3>
+  <h2 class="header">Skittles Selection 6</h2>
+    <h3 class="header">We ECFA now.</h3>
+    <p>
+	  <a style="float:left;" href="index.html">
+	  <img src="cta.png" style="width=418px; height=164px;" />
+	  </a>
+	  <p>
+	  </p>
   <h2 class="header">Chicago Timing Authority</h2>
     <h3 class="header">Collab Pack with ATB</h3>
     <p>
