--- a/simfiles.html
+++ b/simfiles.html
@@ -16,15 +16,24 @@
 <br>
 <h1 class="header">Simfile Pack Releases</h1>
 <h3 class="header">Arranged from newest to oldest</h3>
-<h3 class="header">All files synced to ITG +9ms bias unless otherwise noted.</h3>
+<h3 class="header">All files synced to the ITG +9ms bias unless otherwise noted.</h3>
   <h2 class="header">Skittles Selection 6</h2>
     <h3 class="header">We ECFA now</h3>
     <p>
-	  <a style="float:left;" href="index.html">
-	  <img src="cta.png" style="width=418px; height=164px;" />
+	  <a style="float:left;" href="https://drive.google.com/file/d/1g__viIxHZYsscSHPt_HqOJ2wf6E0y82K/view?usp=sharing">
+	  <img src="ss6.png" style="width=418px; height=164px;" />
 	  </a>
 	  <p>
-	  <br><br><br><br><br><br><br><br><br><br><br>
+	  Finally, competence emerges. This pack is when I began specifically leaning towards "tournament-style" writing in my 
+	  simfiles. Consequently, this is when some of my files began to make infrequent appearances in tournament packs,
+	  such as Rumble in the Prairie, DDR Storm, and East Coast FA.
+	  <br><br>
+	  As you might imagine from the description, the majority of the files in this pack range from moderately to exceptionally 
+	  technical, with little stream or "basic" files present.
+	  <br><br>
+	  Highlights include Dual Emotion, Flashdance, Lonely Witch, Travel to Future, and Zombie Stomp.
+	  </p>
+	  <br><br><br>
 	  </p>
   <h2 class="header">Chicago Timing Authority</h2>
     <h3 class="header">Collab Pack with ATB</h3>
