--- a/simfiles.html
+++ b/simfiles.html
@@ -33,7 +33,11 @@
 	  <br><br>
 	  Highlights include Dual Emotion, Flashdance, Lonely Witch, Travel to Future, and Zombie Stomp.
 	  </p>
-	  <br><br><br>
+	  <br><br>
+	  <p>
+	  Tags: Technical, Full Difficulties
+	  </p>
+	  <br>
 	  </p>
   <h2 class="header">Chicago Timing Authority</h2>
     <h3 class="header">Collab Pack with ATB</h3>
