--- a/simfiles.html
+++ b/simfiles.html
@@ -17,6 +17,23 @@
 <h1 class="header">Simfile Pack Releases</h1>
 <h3 class="header">Arranged from newest to oldest</h3>
 <h3 class="header">All files synced to the ITG +9ms bias unless otherwise noted.</h3>
+  <h2 class="header">Headbangers</h2>
+    <h3 class="header">Collab Pack with Sudzi781</h3>
+    <p>
+	  <a style="float:left;" href="https://drive.google.com/file/d/1hmbnf88eswJLHLCkisFroYgvcdemtXD9/view?usp=sharing">
+	  <img src="hb.png" style="width=418px; height=164px;" />
+	  </a>
+	  <p>
+	  A collab born of our mutual love of heavy metal music, this pack was intentionally designed to 
+	  be lighter on the tech than the writing meta of the time. While there are only Expert charts present here, this pack
+	  is significatly more relaxed in both design and execution than some of my other efforts around this time; it's 
+	  simply fun charts to good music.
+	  <br><br>
+	  Highlights (of mine) include Cinnamon and LIGHTNING.
+	  <br><br>
+	  Tags: Collaboration, All-Around
+	  </p>
+	</p>
   <h2 class="header">Skittles Selection 6</h2>
     <h3 class="header">We ECFA now</h3>
     <p>
@@ -26,7 +43,10 @@
 	  <p>
 	  Finally, competence emerges. This pack is when I began specifically leaning towards "tournament-style" writing in my 
 	  simfiles. Consequently, this is when some of my files began to make infrequent appearances in tournament packs,
-	  such as Rumble in the Prairie, DDR Storm, and East Coast FA.
+	  such as Rumble in the Prairie, DDR Storm, and East Coast FA. This pack was also when I first attempted to explore the
+	  idea of a supplementary scale to better quantify a chart's "scoring" difficulty separate from its passing difficulty
+	  (something that several people began to develop around this time) and the """humble""" beginnings of my tendency
+	  to write comically-long readmes for all of my packs.
 	  <br><br>
 	  As you might imagine from the description, the majority of the files in this pack range from moderately to exceptionally 
 	  technical, with little stream or "basic" files present.
@@ -34,10 +54,11 @@
 	  Highlights include Dual Emotion, Flashdance, Lonely Witch, Travel to Future, and Zombie Stomp.
 	  </p>
 	  <br><br>
-	  <p>
+	</p>
+	<p>
 	  Tags: Technical, Full Difficulties
-	  </p>
-	  <br>
+	</p>
+	<br>
   <h2 class="header">Chicago Timing Authority</h2>
     <h3 class="header">Collab Pack with ATB</h3>
     <p>
