--- a/simfiles.html
+++ b/simfiles.html
@@ -18,7 +18,7 @@
 <h3 class="header">Arranged from newest to oldest</h3>
 <h3 class="header">All files synced to the ITG +9ms bias unless otherwise noted.</h3>
   <h2 class="header">Headbangers</h2>
-    <h3 class="header">Collab Pack with Sudzi781</h3>
+    <h3 class="header">Collab Pack with Sudzi781 - Released Mar. 2019</h3>
     <p>
 	  <a style="float:left;" href="https://drive.google.com/file/d/1hmbnf88eswJLHLCkisFroYgvcdemtXD9/view?usp=sharing">
 	  <img src="hb.png" style="width=418px; height=164px;" />
@@ -26,7 +26,7 @@
 	  <p>
 	  A collab born of our mutual love of heavy metal music, this pack was intentionally designed to 
 	  be lighter on the tech than the writing meta of the time. While there are only Expert charts present here, this pack
-	  is significatly more relaxed in both design and execution than some of my other efforts around this time; it's 
+	  is significantly more relaxed in both design and execution than some of my other efforts around this time; it's 
 	  simply fun charts to good music.
 	  <br><br>
 	  Highlights (of mine) include Cinnamon and LIGHTNING.
@@ -35,7 +35,7 @@
 	  </p>
 	</p>
   <h2 class="header">Skittles Selection 6</h2>
-    <h3 class="header">We ECFA now</h3>
+    <h3 class="header">We ECFA now - Released Jan. 2019</h3>
     <p>
 	  <a style="float:left;" href="https://drive.google.com/file/d/1g__viIxHZYsscSHPt_HqOJ2wf6E0y82K/view?usp=sharing">
 	  <img src="ss6.png" style="width=418px; height=164px;" />
@@ -49,7 +49,7 @@
 	  to write comically-long readmes for all of my packs.
 	  <br><br>
 	  As you might imagine from the description, the majority of the files in this pack range from moderately to exceptionally 
-	  technical, with little stream or "basic" files present.
+	  technical, with few stream or "basic" files present.
 	  <br><br>
 	  Highlights include Dual Emotion, Flashdance, Lonely Witch, Travel to Future, and Zombie Stomp.
 	  </p>
@@ -60,7 +60,7 @@
 	</p>
 	<br>
   <h2 class="header">Chicago Timing Authority</h2>
-    <h3 class="header">Collab Pack with ATB</h3>
+    <h3 class="header">Collab Pack with ATB - Released Sept. 2018</h3>
     <p>
 	  <a style="float:left;" href="https://drive.google.com/file/d/1R5nhPlDArNcd2XZelzTa164BcuDw_UWf/view?usp=sharing">
 	  <img src="cta.png" style="width=418px; height=164px;" />
@@ -78,7 +78,7 @@
 		<br>
 	  </p>
   <h2 class="header">Skittles Selection 5</h2>
-    <h3 class="header">When things started to click. - Feat. TS3 Highlights</h3>
+    <h3 class="header">When things started to click - Released Sept. 2018</h3>
     <p>
       <a style="float:left;" href="https://drive.google.com/file/d/1MSgRRmCujgOL0Be5S2rHiyIHw1DcrI1h/view?usp=sharing">
         <img src="ss5.png" style="width=418px; height=164px;" />
