--- a/simfiles.html
+++ b/simfiles.html
@@ -73,7 +73,7 @@
 		<br><br>
 		Highlights (of mine) include ChaserXX, Contrast, Hellcrime, and Mischievous Masquerade
 		<br>
-		<p>Tags: Collaboration, Technical</p>
+		<p>Tags: Collaboration, Technical, HS</p>
 		</p>
 		<br>
 	  </p>
