Adding SS7 section

--- a/simfiles.html
+++ b/simfiles.html
@@ -17,6 +17,30 @@
 <h1 class="header">Simfile Pack Releases</h1>
 <h3 class="header">Arranged from newest to oldest</h3>
 <h3 class="header">All files synced to the ITG +9ms bias unless otherwise noted.</h3>
+  <h2 class="header">Skittles Selection 7</h2>
+  <h3 class="header">"Possibly the best tech pack of 2019" - Released Apr. 2019</h3>
+  <p>
+    <a style="float:left;" href="https://drive.google.com/file/d/17G9NxeIW6t98s6dFWGL9d4wH_t86Whu_/view?usp=sharing">
+	<img src="ss7.png" style="width=418px; height=164px;" />
+	</a>
+	<p>
+	Yes, someone said that about this pack. No, I didn't pay them to say it. This pack contains some of my best work 
+	thus far and marks the point where I feel like I really locked in my own personal style of technical writing. 
+	I hope you enjoy playing it as much as I enjoyed making it.
+	</p>
+	<br><br>
+	<p>
+	Highlights and notable tournament files include Arcology on Permafrost, Bubble in the Air, Estrangement, Giga Thrash, 
+	Glitched Character, Panjandrum, Quality Control, Samplinglitch, and Zephyr.
+	</p>
+	<p>
+	Yes, that is almost half the pack. I wasn't kidding when I said this is some of my best work.
+	</p>
+	<br><br>
+	<p>
+	Tags: Technical, HS, Full Difficulties
+	</p>
+	<br>
   <h2 class="header">Headbangers</h2>
     <h3 class="header">Collab Pack with Sudzi781 - Released Mar. 2019</h3>
     <p>
@@ -61,7 +85,7 @@
 	</p>
 	<br>
   <h2 class="header">Chicago Timing Authority</h2>
-    <h3 class="header">Collab Pack with ATB - Released Sept. 2018</h3>
+    <h3 class="header">Collab Pack with ATB - Released Sep. 2018</h3>
     <p>
 	  <a style="float:left;" href="https://drive.google.com/file/d/1R5nhPlDArNcd2XZelzTa164BcuDw_UWf/view?usp=sharing">
 	  <img src="cta.png" style="width=418px; height=164px;" />
