--- a/simfiles.html
+++ b/simfiles.html
@@ -17,6 +17,26 @@
 <h1 class="header">Simfile Pack Releases</h1>
 <h3 class="header">Arranged from newest to oldest</h3>
 <h3 class="header">All files synced to the ITG +9ms bias unless otherwise noted.</h3>
+  
+  
+  <h2 class="header">Resistance Device</h2>
+  <h3 class="header">"Boomboomboomboomboomboom" - Released Nov. 2019</h3>
+  <p>
+    <a style="float:left;" href="https://drive.google.com/file/d/1yXLVt5NZGeDFaY2apGhWhznRCSXPb-tg/view?usp=sharing">
+	<img src="res.png" style="width=418px; height=164px;" />
+	</a>
+	<p>
+	The first fully-stream pack I wrote, finished and released. This (mini)pack is a six-song bundle of the
+	album "Resistance Device" by Matatabi Sound System, one of Kobaryo's many aliases, focusing on a 
+	Frenchcore-style sound, with some influences from his other styles/aliases as well.
+	</p>
+	<br><br>
+	<p>
+	Tags: Stream, Single Artist
+	</p>
+	<br>
+	</p>
+	
   <h2 class="header">Skittles Selection 7</h2>
   <h3 class="header">"Possibly the best tech pack of 2019" - Released Apr. 2019</h3>
   <p>
@@ -41,8 +61,9 @@
 	Tags: Technical, HS, Full Difficulties
 	</p>
 	<br>
+	
   <h2 class="header">Headbangers</h2>
-    <h3 class="header">Collab Pack with Sudzi781 - Released Mar. 2019</h3>
+  <h3 class="header">Collab Pack with Sudzi781 - Released Mar. 2019</h3>
     <p>
 	  <a style="float:left;" href="https://drive.google.com/file/d/1hmbnf88eswJLHLCkisFroYgvcdemtXD9/view?usp=sharing">
 	  <img src="hb.png" style="width=418px; height=164px;" />
@@ -59,8 +80,9 @@
 	  <br><br>
 	  </p>
 	</p>
+	
   <h2 class="header">Skittles Selection 6</h2>
-    <h3 class="header">We ECFA now - Released Jan. 2019</h3>
+  <h3 class="header">We ECFA now - Released Jan. 2019</h3>
     <p>
 	  <a style="float:left;" href="https://drive.google.com/file/d/1g__viIxHZYsscSHPt_HqOJ2wf6E0y82K/view?usp=sharing">
 	  <img src="ss6.png" style="width=418px; height=164px;" />
@@ -84,8 +106,9 @@
 	  Tags: Technical, Full Difficulties
 	</p>
 	<br>
+	
   <h2 class="header">Chicago Timing Authority</h2>
-    <h3 class="header">Collab Pack with ATB - Released Sep. 2018</h3>
+  <h3 class="header">Collab Pack with ATB - Released Sep. 2018</h3>
     <p>
 	  <a style="float:left;" href="https://drive.google.com/file/d/1R5nhPlDArNcd2XZelzTa164BcuDw_UWf/view?usp=sharing">
 	  <img src="cta.png" style="width=418px; height=164px;" />
@@ -102,8 +125,9 @@
 		</p>
 		<br>
 	  </p>
+	  
   <h2 class="header">Skittles Selection 5</h2>
-    <h3 class="header">When things started to click - Released Sept. 2018</h3>
+  <h3 class="header">When things started to click - Released Sept. 2018</h3>
     <p>
       <a style="float:left;" href="https://drive.google.com/file/d/1MSgRRmCujgOL0Be5S2rHiyIHw1DcrI1h/view?usp=sharing">
         <img src="ss5.png" style="width=418px; height=164px;" />
@@ -121,6 +145,7 @@
 	    <br>
       </p>
 <br>
+
   <h2 class="header">Skittles' Ancient Garbage</h2>
   <h3 class="header">We all start somewhere. I started in the dumpster.</h3>
   <p>
