--- a/simfiles.html
+++ b/simfiles.html
@@ -18,6 +18,37 @@
 <h3 class="header">Arranged from newest to oldest</h3>
 <h3 class="header">All files synced to the ITG +9ms bias unless otherwise noted.</h3>
   
+  <h2 class="header">DJ Myosuke</h2>
+  <h3 class="header">With appreciation and thanks to Okami & Rems - Released Apr. 2020</h3>
+  <p>
+    <a style="float:left;" href="https://drive.google.com/file/d/1yXLVt5NZGeDFaY2apGhWhznRCSXPb-tg/view?usp=sharing">
+	<img src="djm.png" style="width=418px; height=164px;" />
+	</a>
+	<p>
+	Another stream-focused pack, and another pack dedicated to a single artist (if the title didn't tip you off).
+	This pack was initially started to be part of a series of packs headed by Okami named "Stamina Factory," with
+	each entry in the series being dedicated to a different artist, crafted by a different step artist. Unfortunately,
+	the series was ultimately unable to take flight, but by that time, the majority of this pack had already been written,
+	so I finished it up regardless.
+	<br><br>
+	And then I restepped it, because most of it was... really bad.
+	<br><br>
+	And then I restepped it <p style="font-style:italic;">again,</p> because it was still bad.
+	<br><br>
+	So, in the end, this one took a lot of effort to get just right, and in spending said effort, I ended up learning
+	a ton about how to pattern streams well at all speeds (coupled with the one-offs and singles I was doing on the 
+	side for the fof crowd) and formed a rough, but lovingly-crafted foundation for me to become adept at charting
+	not just tech, but stream files as well.
+	<br><br>
+	The ultimate capstone to this pack is "Promised Everland," an original, 20-minute long mixtape created by the master
+	himself, Rems. This marathon serves as the "boss" of the pack and is, naturally, significantly more challenging 
+	to play and pass than the other charts present. I strongly encourage you to listen to the mix even if you're 
+	not interested in playing the chart - it is absolutely phenomenal.
+	<br><br>
+	Tags: Stream, Single Artist, Marathon
+	</p>
+	<br><br>
+	</p>
   
   <h2 class="header">Resistance Device</h2>
   <h3 class="header">"Boomboomboomboomboomboom" - Released Nov. 2019</h3>
@@ -34,7 +65,7 @@
 	<p>
 	Tags: Stream, Single Artist
 	</p>
-	<br>
+	<br><br>
 	</p>
 	
   <h2 class="header">Skittles Selection 7</h2>
