--- a/simfiles.html
+++ b/simfiles.html
@@ -33,7 +33,7 @@
 	<br><br>
 	And then I restepped it, because most of it was... really bad.
 	<br><br>
-	And then I restepped it <p style="font-style:italic;">again,</p> because it was still bad.
+	And then I restepped it *again,* because it was still bad.
 	<br><br>
 	So, in the end, this one took a lot of effort to get just right, and in spending said effort, I ended up learning
 	a ton about how to pattern streams well at all speeds (coupled with the one-offs and singles I was doing on the 
