--- a/simfiles.html
+++ b/simfiles.html
@@ -33,7 +33,7 @@
 	<br><br>
 	And then I restepped it, because most of it was... really bad.
 	<br><br>
-	And then I restepped it <p style="font-style:italic; class=text-nowrap;">again,</p><p> because it was still bad.
+	And then I restepped it >again, because it was still bad.
 	<br><br>
 	So, in the end, this one took a lot of effort to get just right, and in spending said effort, I ended up learning
 	a ton about how to pattern streams well at all speeds (coupled with the one-offs and singles I was doing on the 
@@ -46,7 +46,6 @@
 	not interested in playing the chart - it is absolutely phenomenal.
 	<br><br>
 	Tags: Stream, Single Artist, Marathon
-	</p>
 	</p>
 	<br><br>
 	</p>
