--- a/simfiles.html
+++ b/simfiles.html
@@ -21,7 +21,7 @@
   <h2 class="header">DJ Myosuke</h2>
   <h3 class="header">With appreciation and thanks to Okami & Rems - Released Apr. 2020</h3>
   <p>
-    <a style="float:left;" href="https://drive.google.com/file/d/1yXLVt5NZGeDFaY2apGhWhznRCSXPb-tg/view?usp=sharing">
+    <a style="float:left;" href="https://drive.google.com/file/d/1K8pq1IjOfRgPUbbKQkkKSZKR6hzE4rUc/view?usp=sharing">
 	<img src="djm.png" style="width=418px; height=164px;" />
 	</a>
 	<p>
@@ -33,7 +33,7 @@
 	<br><br>
 	And then I restepped it, because most of it was... really bad.
 	<br><br>
-	And then I restepped it >again, because it was still bad.
+	And then I restepped it again, because it was still bad.
 	<br><br>
 	So, in the end, this one took a lot of effort to get just right, and in spending said effort, I ended up learning
 	a ton about how to pattern streams well at all speeds (coupled with the one-offs and singles I was doing on the 
