--- a/simfiles.html
+++ b/simfiles.html
@@ -18,6 +18,47 @@
 <h3 class="header">Arranged from newest to oldest</h3>
 <h3 class="header">All files synced to the ITG +9ms bias unless otherwise noted.</h3>
   
+  <h2 class="header">Skittles Stream Collection</h2>
+  <h3 class="header">I'm good at streams now. - Released Aug. 2020</h3>
+  <p>
+    <a style="float:left;" href="https://drive.google.com/file/d/1msaQtMZ5QZKjUs5z-zRODGGDNzcO18OY/view?usp=sharing">
+	<img src="ssc.png" style="width=418px; height=164px;" />
+	</a>
+	<p>
+	This pack is rooted in a long-running desire of mine to grow my own skill and understanding of meaningful, 
+	relevant stream patterning, as well as to take a deeper dive into the artistic side of using the abstract 
+	nature of motion, direction, and stream patterning to accurately represent music in fun and meaningful ways 
+	to the same level of skill and aptitude that I do so with my technical writing. I've long wanted to be a 
+	competent, well-rounded chart writer who could be counted on to create enjoyable content focused on both 
+	technical and stream-based challenges.
+	<br><br>
+	I also like heavy, fast music, and heavy, fast music makes really good stamina charts. So.
+	<br><br>
+	Highlights include Travel Inside and For Creatures Such as We, which helped me achieve a third-place finish in the 
+	2020 The Main Ingredient competition in Stamina Showcase.
+	<br><br>
+	Tags: Stream
+	</p>
+	</p>
+	
+	<h2 class="header">Merge</h2>
+    <h3 class="header">Mini-Collab with ITGAlex - Released </h3>
+    <p>
+      <a style="float:left;" href="https://drive.google.com/file/d/1rAaQbyNO6SsUxapKKt-bVfmBzAw6ha0S/view">
+	  <img src="ssc.png" style="width=418px; height=164px;" />
+	  </a>
+	  <p>
+	  A small, five-song minipack with all the songs from the WHITEFISTS album "Merge." A tag-team effort built
+	  from a mutual love of a really, really good progressive metal album with an emphasis on moderate-to-intense tech.
+	  <br><br>
+	  Included in this pack are Course files to allow you to experience the album (and the charts) from front-to-back as
+	  a single package. Good luck to those who try; it gets a little silly towards the end.
+	  <br><br>
+	  Tags: Collab, Technical, Courses
+	  </p>
+	  </p>
+  
+  
   <h2 class="header">DJ Myosuke</h2>
   <h3 class="header">With appreciation and thanks to Okami & Rems - Released Apr. 2020</h3>
   <p>
