--- a/simfiles.html
+++ b/simfiles.html
@@ -45,7 +45,7 @@
     <h3 class="header">Mini-Collab with ITGAlex - Released </h3>
     <p>
       <a style="float:left;" href="https://drive.google.com/file/d/1rAaQbyNO6SsUxapKKt-bVfmBzAw6ha0S/view">
-	  <img src="ssc.png" style="width=418px; height=164px;" />
+	  <img src="mer.png" style="width=418px; height=164px;" />
 	  </a>
 	  <p>
 	  A small, five-song minipack with all the songs from the WHITEFISTS album "Merge." A tag-team effort built
