--- a/simfiles.html
+++ b/simfiles.html
@@ -43,7 +43,7 @@
 	<br>
 	
 	<h2 class="header">Merge</h2>
-    <h3 class="header">Mini-Collab with ITGAlex - Released </h3>
+    <h3 class="header">Mini-Collab with ITGAlex - Released Jun. 2020</h3>
     <p>
       <a style="float:left;" href="https://drive.google.com/file/d/1rAaQbyNO6SsUxapKKt-bVfmBzAw6ha0S/view">
 	  <img src="mer.png" style="width=418px; height=164px;" />
