--- a/simfiles.html
+++ b/simfiles.html
@@ -37,6 +37,8 @@
 	Highlights include Travel Inside and For Creatures Such as We, which helped me achieve a third-place finish in the 
 	2020 The Main Ingredient competition in Stamina Showcase.
 	<br><br>
+	<a href="https://docs.google.com/spreadsheets/d/1x1yDetucjyczEVfPedtps2n6SUbb3MOFcsCh4rEb6Uk/edit?usp=sharing">Pack Spreadsheet</a>
+	<br><br>
 	Tags: Stream
 	</p>
 	</p>
