--- a/simfiles.html
+++ b/simfiles.html
@@ -37,7 +37,7 @@
 	Highlights include Travel Inside and For Creatures Such as We, which helped me achieve a third-place finish in the 
 	2020 The Main Ingredient competition in Stamina Showcase.
 	<br><br>
-	<a class="textlink" href="https://docs.google.com/spreadsheets/d/1x1yDetucjyczEVfPedtps2n6SUbb3MOFcsCh4rEb6Uk/edit?usp=sharing" target="_blank">Pack Spreadsheet</a>
+	<a style="color:rgb(191,191,169)" href="https://docs.google.com/spreadsheets/d/1x1yDetucjyczEVfPedtps2n6SUbb3MOFcsCh4rEb6Uk/edit?usp=sharing" target="_blank">Pack Spreadsheet</a>
 	<br><br>
 	Tags: Stream
 	</p>
