--- a/simfiles.html
+++ b/simfiles.html
@@ -90,6 +90,8 @@
 	to play and pass than the other charts present. I strongly encourage you to listen to the mix even if you're 
 	not interested in playing the chart - it is absolutely phenomenal.
 	<br><br>
+	<a style="color:rgb(191,191,169)" href="https://docs.google.com/spreadsheets/d/1z8q01rOXo0wcUyIbA-VA6S_UHsnQXg5catgYbjHmbqs/edit?usp=sharing" target="_blank">Pack Spreadsheet</a>
+	<br><br>
 	Tags: Stream, Single Artist, Marathon
 	</p>
 	<br><br>
@@ -132,6 +134,8 @@
 	<p>
 	Yes, that is almost half the pack. I wasn't kidding when I said this is some of my best work.
 	</p>
+	<br><br>
+	<a style="color:rgb(191,191,169)" href="https://docs.google.com/spreadsheets/d/1AQVt9yfD2VopbIbfqsvDMsoFcFpmcCZzgejctg_rgFA/edit?usp=sharing" target="_blank">Pack Spreadsheet</a>
 	<br><br>
 	<p>
 	Tags: Technical, HS, Full Difficulties
