--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   </div>
   <div class="container">
     <div class="centered-text">
-      <p>Tutorials</p>
+      <p>Resources</p>
     </div>
-    <a href="https://github.com">
+    <a href="resources.html">
       <img src="gimp.png" height="450px" width="450px" />
     </a>
   </div>
