--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </div>
   <div class="container">
     <div class="centered-text">
-      <p>Resources</p>
+      <p style="font-size:92px">Resources</p>
     </div>
     <a href="resources.html">
       <img src="gimp.png" height="450px" width="450px" />
