--- a/Resources.html
+++ b/Resources.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" type="text/css" href="simstyle.css">
+	<link rel="stylesheet" type="text/css" href="genstyle.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
