--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="centered-text">
       <p style="font-size:92px">Resources</p>
     </div>
-    <a href="resources.html">
+    <a href="guides.html">
       <img src="gimp.png" height="450px" width="450px" />
     </a>
   </div>
