--- a/simfiles.html
+++ b/simfiles.html
@@ -10,7 +10,7 @@
 <body>
   <ul class="links">
     <li><a href="index.html">Home</a></li>
-    <li><a href="resources.html">Resources</a></li>
+    <li><a href="guides.html">Resources</a></li>
     <li><a href="https://www.youtube.com/channel/UCFhnym7AHHsislUTUmAZwzQ">Youtube</a></li>
   </ul>
 <br>
